--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8d737d">  <td>25/02/20 23:27:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TextBoxes.handlingTextBoxes()[pri:0, instance:testLeafPractice.TextBoxes@6995bf68]">handlingTextBoxes</td> 
+<tr bgcolor="8d737d">  <td>25/03/06 22:15:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HowToVerifyFileDownload.verifyFileDownload()[pri:0, instance:selenium.HowToVerifyFileDownload@16fdec90]">verifyFileDownload</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8d737d">  <td>25/02/20 23:27:28</td>   <td>4043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TextBoxes.quitBrowser()[pri:0, instance:testLeafPractice.TextBoxes@6995bf68]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
